# pyppl_annotate

./: .pre-commit-config.yaml  .tagitrc  README.md  pyppl_annotate.py  pyproject.toml  requirements.txt  setup.py  tox.ini
tests/: test_annotate.py
